horizontal overflow fix

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -43,7 +43,6 @@ a:hover {
   padding: 25vh 10%;
   min-height: 100vh;
   min-width: 60vh;
-  width: 100vw;
   box-sizing: border-box;
   box-shadow: 0 10px 10px rgba(0, 0, 0, .7);
   transform-style: inherit;
